REFACTOR : 나의 경조사 세부사항 조회 리팩토링 및 기능 추가 구현